--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 language: perl
-perl:
-  - 5.20
-  - 5.18
-  - 5.16
-  - 5.14
-  - 5.12
-  - 5.10
-  - 5.8
+perl: ["5.8", "5.10", "5.12", "5.14", "5.16", "5.18", "5.20"]
+
 before_install:
   - perlbrew install-cpanm -f
 install:
