--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
 install:
   - (cpanm --installdeps --with-develop -nq .) || cat ~/.cpanm/build.log
 script:
-  - prove -lr xt
+  - prove -lr xt -j9
 sudo: false
