--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,24 @@
 language: perl
-perl:
-  - 5.26
-  - 5.24
-  - 5.22
-  - '5.20'
-  - 5.18
-  - 5.16
-  - 5.14
-  - 5.12
-  - '5.10'
-  - 5.8
+os: linux
+dist: xenial
+jobs:
+  - perl: 5.26
+  - perl: 5.24
+  - perl: 5.22
+  - perl: '5.20'
+  - perl: 5.18
+  - perl: 5.16
+  - perl: 5.14
+  - perl: 5.12
+    dist: trusty
+  - perl: '5.10'
+    dist: trusty
+  - perl: 5.8
+    dist: trusty
 before_install:
   - perlbrew install-cpanm -f
 install:
   - (cpanm --installdeps --with-develop -nq .) || cat ~/.cpanm/build.log
 script:
   - prove -lr xt -j9
-sudo: false
+
